--- a/css/services.css
+++ b/css/services.css
@@ -69,5 +69,5 @@
 #services .services__row .service p {
     font-size: 14px;
     line-height: 22px;
-    text-align: center;
+    text-align: justify;
 }
